# sms

./: CMakeLists.txt  Makefile  README.md  build.bat  main.cpp
include/: io.hpp  student.hpp
src/: io.cpp  main.cpp  student.cpp
